# panel-game

./: Cargo.toml  Shuttle.toml
frontend/: nuxt.config.ts  package-lock.json  package.json
frontend/assets/css/: main.css
frontend/components/: DisplayModeButton.vue  EstimateButton.vue  GridPanelItem.vue  HiddenItemSetting.vue  PanelGridContainer.vue  ResetButton.vue
frontend/pages/: index.vue
frontend/utils/: stores.ts  types.ts
src/: colors.rs  estimator.rs  main.rs  types.rs
src/api/: estimate.rs  index.rs  mod.rs
