[package]
name = "panel-game"
version = "0.1.0"
edition = "2024"

[dependencies]
actix-files = "0.6.6"
actix-web = "4.10.2"
rand = "0.9.0"
rayon = "1.10.0"
serde = { version = "1.0.219", features = ["derive"] }
shuttle-actix-web = "0.53.0"
shuttle-runtime = "0.53.0"
tokio = "1.44.1"

[dev-dependencies]
serde_json = "1.0.140"
